offer refund methods added

--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -17,7 +17,7 @@
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
 		<div class="container">
-			<a class="navbar-brand text-black" href="/">SBM</a>
+			<a class="navbar-brand text-black" href="/index">SBM</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -36,23 +36,6 @@
 		</div>
 	</nav>
 	<!--	End Navbar-->
-
-
-	<!--	<section id="featured" class="my-5 pt-5">-->
-	<!--		<div class="container-register mt-5 py-5" th:object="${customer}">-->
-	<!--			<form th:object="${car}" method="post" name="myForm" action="/result">-->
-	<!--				<h2 th:text="${customer.firstname}"></h2>-->
-	<!--				<h3 class="text-center">Here is the offer price we have prepared for you!</h3>-->
-
-	<!--				<input type="hidden" name="carId" th:value="${car.id}">-->
-	<!--				<h3 th:text="${car.offer + '₺'}"></h3>-->
-	<!--				<div class="button-group">-->
-	<!--					<button type="submit" name="result" value="Accepted" class="btn accept-btn">Accept</button>-->
-	<!--					<button type="submit" name="result" value="Rejected" class="btn reject-btn">Reject</button>-->
-	<!--				</div>-->
-	<!--			</form>-->
-	<!--		</div>-->
-	<!--	</section>-->
 
 	<div class="section-header mt-5">
 		<div class="container">
