--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -51,7 +51,7 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<a class="navbar-brand text-black" href="/">SBM</a>
+			<a class="navbar-brand text-black" href="/index">SBM</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
 	<!--End Navbar-->
 
 
-	<div class="container mt-5">		
+	<div class="container mt-5">
 		<table class="table table-hover">
 			<thead>
 				<tr>
@@ -83,22 +83,21 @@
 					<th scope="col">Purpose of Usage</th>
 					<th cope="col">Brand</th>
 					<th cope="col">Fuel Type</th>
-					<th cope="col">Engine Size</th>					
+					<th cope="col">Engine Size</th>
 					<th scope="col">Seating Capacity</th>
 					<th scope="col">Offer</th>
 					<th scope="col">Result</th>
-					<th scope="col">Update</th>
 					<th scope="col">Delete</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="c :${car}"> 
+				<tr th:each="c :${car}">
 					<td th:text="${c.id}"></td>
 					<td th:text="${c.customer_id}"></td>
 					<td>
-						<span th:text="${c.license_plate1}"></span> 
-  						<span th:text="${c.license_plate2}"></span>
-  						<span th:text="${c.license_plate3}"></span>
+						<span th:text="${c.license_plate1}"></span>
+						<span th:text="${c.license_plate2}"></span>
+						<span th:text="${c.license_plate3}"></span>
 					</td>
 					<td th:text="${c.type}"></td>
 					<td th:text="${c.purpose}"></td>
@@ -107,15 +106,38 @@
 					<td th:text="${c.engine_size}"></td>
 					<td th:text="${c.seat_capacity}"></td>
 					<td th:text="${c.offer}"></td>
-				    <td th:text="${c.result}"></td>
-				    
-					<td><button><a th:href="@{/editCar/{id}(id=${c.id})}"><i id="icon-edit"
-									class="fa-regular fa-pen-to-square"></i></a></button></td>
-					<td><button><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>																							
+					<td th:text="${c.result}"></td>
+
+					<td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+							<a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash" class="gg-trash"></i></a>
+						</button></td>
+					<!--					<td><button><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash"-->
+					<!--									class="gg-trash"></i></a></button></td>	
+					
+					<!-- Modal -->
+					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"
+						tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" th:object="${car}">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<h1 class="panel-title price" th:text="${c.starting_date}"></h1>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-primary">Understood</button>
+								</div>
+							</div>
+						</div>
+					</div>
+
 				</tr>
 			</tbody>
-		</table>		
+		</table>
 	</div>
 
 
@@ -128,6 +150,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
 		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
 		crossorigin="anonymous"></script>
+	<script src="/js/app.js"></script>
 </body>
 
 </html>
