--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,26 +80,25 @@
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/traffic.jpg" alt="">
 				<h5 class="p-name">Traffic Insurance</h5>
-				<button class="buy-btn"><a th:href="@{/trafficInsuranceForm(customer_id = ${customer_id})}">Get
-						Offer</a></button>
+				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
 			</div>
 
-			<div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
+			<div  class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/auto.jpg" alt="">
 				<h5 class="p-name">Comprehensive Insurance</h5>
-				<button class="buy-btn">Get Offer</button>
+				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
 
 			</div>
-			<div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
+			<div onclick="window.location.href='/customerRegisterForm'" class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/health.jpg" alt="">
 				<h5 class="p-name">Health Insurance</h5>
-				<button class="buy-btn">Get Offer</button>
+				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
 
 			</div>
-			<div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
+			<div onclick="window.location.href='/customerRegisterForm'" class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/dask.jpg" alt="">
 				<h5 class="p-name">Earthquake Insurance</h5>
-				<button class="buy-btn">Get Offer</button>
+				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
 
 			</div>
 		</div>
