--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -82,9 +82,8 @@
 	</nav>
 	<!--End Navbar-->
 
-
+	<!-- Modal -->
 	<div class="container mt-5">
-
 		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalTitle"
 			aria-hidden="true" th:if="${showText}">
 			<div class="modal-dialog" role="document">
@@ -106,7 +105,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>				
 
 
 		<table class="table table-hover text-center">
@@ -200,6 +199,7 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
 	</div>
 
 	
