--- a/src/main/resources/templates/insuranceRefund.html
+++ b/src/main/resources/templates/insuranceRefund.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Usage Time (Day)</h6>
-						<p th:text="${car.days_diff + ' day'}"></p>
+						<p th:text="${car.daysDiff + ' day'}"></p>
 					</div>
 					<hr class="second-hr">
 					<div class="d-flex justify-content-between">
