--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -131,7 +131,7 @@
 			<tbody>
 				<tr th:each="c :${car}">
 					<td th:text="${c.id}"></td>
-					<td th:text="${c.customer_id}"></td>
+					<td th:text="${c.customerId}"></td>
 					<td>
 						<span th:text="${c.plate1}"></span>
 						<span th:text="${c.plate2}"></span>
@@ -140,13 +140,13 @@
 					<td th:text="${c.type}"></td>
 					<td th:text="${c.purpose}"></td>
 					<td th:text="${c.brand}"></td>
-					<td th:text="${c.fuel_type}"></td>
-					<td th:text="${c.engine_size}"></td>
-					<td th:text="${c.seat_capacity}"></td>
+					<td th:text="${c.fuelType}"></td>
+					<td th:text="${c.engineSize}"></td>
+					<td th:text="${c.seatCapacity}"></td>
 					<td th:text="${c.offer}"></td>
 					<td th:text="${c.period}"></td>
-					<td th:text="${c.start_date}"></td>
-					<td th:text="${c.end_date}"></td>
+					<td th:text="${c.startDate}"></td>
+					<td th:text="${c.endDate}"></td>
 					<td th:text="${c.result}"></td>
 
 					<!--					<td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">-->
