--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -28,10 +28,6 @@
 		#icon-trash:hover {
 			color: rgb(255, 62, 62);
 		}
-		
-		#icon-image {
-			font-size: 20px;
-		}
 
 		#icon-edit {
 			color: blue;
@@ -48,6 +44,17 @@
 			margin-left: 50px;
 		}
 	</style>
+
+	<script>
+		
+		window.onload = function () {
+			$(document).ready(function () {
+				$('#myModal').modal('show');
+			});
+		};
+
+	</script>
+
 
 </head>
 
@@ -73,59 +80,52 @@
 			</div>
 		</div>
 	</nav>
-	<!--End Navbar-->
+	<!--End Navbar-->		
 
-
-	<div class="container mt-5">		
+	<div class="container mt-5">
 		<table class="table table-hover text-center">
 			<thead>
 				<tr>
-					<th scope="col">Id</th>
-					<th scope="col">TC</th>
-					<th scope="col">Birth-Date</th>
-					<th scope="col">Email</th>
-					<th scope="col">First Name</th>
-					<th cope="col">Last Name</th>
-					<th cope="col">Province</th>
-					<th cope="col">District</th>					
-					<th scope="col">Insurance Type</th>
-					<th scope="col">Home List</th>
-					<th scope="col">Car List</th>					
-					<th scope="col">Update</th>
-					<th scope="col">Delete</th>
+					<th scope="col">Home Id</th>
+					<th scope="col">Customer Id</th>
+					<th scope="col">Construction Type</th>
+					<th scope="col">Usage Type</th>
+					<th scope="col">Province</th>
+					<th cope="col">District</th>
+					<th cope="col">Neighbourhood</th>
+					<th cope="col">Building Number</th>
+					<th scope="col">Apartment</th>
+					<th scope="col">Floor</th>
+					<th scope="col">Building Age</th>
+					<th scope="col">Owner Title</th>
+					<th scope="col">See Insurance Details</th>
+<!--					<th scope="col">Delete</th>-->
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="c :${customer}"> 
-					<td th:text="${c.customerId}"></td>
-					<td th:text="${c.tc}"></td>
-					<td th:text="${c.birth}"></td>
-					<td th:text="${c.email}"></td>
-					<td th:text="${c.firstname}"></td>
-					<td th:text="${c.lastname}"></td>
-					<td th:text="${c.province}"></td>
-					<td th:text="${c.district}"></td>					
-<!--					<td><select name="format" onchange="location = this.value;">						-->
-<!--							<option>Select</option>		-->
-<!--							<option th:value="@{/trafficInsuranceForm(customerId = ${c.customerId})}">Traffic Insurance</option>-->
-<!--							<option value="">Comprehensive Insurance</option>-->
-<!--							<option value="">Health Insurance</option>-->
-<!--							<option value="">Earthquake Insurance</option>-->
-<!--						</select>-->
-<!--					</td>-->						
-					<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span class="badge text-bg-primary fs-6">Select Type</span></a></td>
-					<td><button class="mx-auto"><a th:href="@{/homeList/{customerId}(customerId=${c.customerId})}"><i class="fa-solid fa-house" id="icon-image"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/carList/{customerId}(customerId=${c.customerId})}"><i class="fa-solid fa-car" id="icon-image"></i></a></button></td>						
-					<td><button class="mx-auto"><a th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-edit"
-									class="fa-regular fa-pen-to-square"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>																							
+				<tr th:each="h :${home}">
+					<td th:text="${h.homeId}"></td>
+					<td th:text="${h.customerId}"></td>
+					<td th:text="${h.type}"></td>
+					<td th:text="${h.typeOfUse}"></td>
+					<td th:text="${h.province}"></td>
+					<td th:text="${h.district}"></td>
+					<td th:text="${h.neighbourhood}"></td>
+					<td th:text="${h.buildingNumber}"></td>
+					<td th:text="${h.apartment}"></td>
+					<td th:text="${h.floor}"></td>
+					<td th:text="${h.buildingAge}"></td>
+					<td th:text="${h.ownerTitle}"></td>
+					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.customerId})}"><i class="fa-solid fa-ellipsis"></i></a></button></td>
+<!--					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${h.id})}"><i id="icon-trash"-->
+<!--									class="gg-trash"></i></a></button></td>-->
 				</tr>
 			</tbody>
-		</table>		
+		</table>
+	</div>
 	</div>
 
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
 		crossorigin="anonymous"></script>
@@ -135,6 +135,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
 		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
 		crossorigin="anonymous"></script>
+	<script src="/js/app.js"></script>
 </body>
 
 </html>
