--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -28,10 +28,6 @@
 		#icon-trash:hover {
 			color: rgb(255, 62, 62);
 		}
-		
-		#icon-image {
-			font-size: 20px;
-		}
 
 		#icon-edit {
 			color: blue;
@@ -48,6 +44,17 @@
 			margin-left: 50px;
 		}
 	</style>
+
+	<script>
+		
+		window.onload = function () {
+			$(document).ready(function () {
+				$('#myModal').modal('show');
+			});
+		};
+
+	</script>
+
 
 </head>
 
@@ -74,58 +81,71 @@
 		</div>
 	</nav>
 	<!--End Navbar-->
+	
+	<div class="container mt-5">
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalTitle"
+			aria-hidden="true" th:if="${showText}">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p>Listelenen ID'li Evlerinizin Sigorta Süresi Bitmiştir:</p>
+						<ul>
+							<li th:each="data : ${expiredHomes}" th:text="${data.getHomeId()}"></li>
+						</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>						
 
 
-	<div class="container mt-5">		
 		<table class="table table-hover text-center">
 			<thead>
 				<tr>
-					<th scope="col">Id</th>
-					<th scope="col">TC</th>
-					<th scope="col">Birth-Date</th>
-					<th scope="col">Email</th>
-					<th scope="col">First Name</th>
-					<th cope="col">Last Name</th>
-					<th cope="col">Province</th>
-					<th cope="col">District</th>					
+					<th scope="col">Insurance Id</th>
 					<th scope="col">Insurance Type</th>
-					<th scope="col">Home List</th>
-					<th scope="col">Car List</th>					
-					<th scope="col">Update</th>
+					<th scope="col">Customer Id</th>
+					<th scope="col">Car Id</th>
+					<th scope="col">Home Id</th>
+					<th cope="col">Offer</th>
+					<th cope="col">Result</th>
+					<th cope="col">Start Date</th>
+					<th scope="col">End Date</th>
+					<th scope="col">Period</th>
 					<th scope="col">Delete</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="c :${customer}"> 
-					<td th:text="${c.customerId}"></td>
-					<td th:text="${c.tc}"></td>
-					<td th:text="${c.birth}"></td>
-					<td th:text="${c.email}"></td>
-					<td th:text="${c.firstname}"></td>
-					<td th:text="${c.lastname}"></td>
-					<td th:text="${c.province}"></td>
-					<td th:text="${c.district}"></td>					
-<!--					<td><select name="format" onchange="location = this.value;">						-->
-<!--							<option>Select</option>		-->
-<!--							<option th:value="@{/trafficInsuranceForm(customerId = ${c.customerId})}">Traffic Insurance</option>-->
-<!--							<option value="">Comprehensive Insurance</option>-->
-<!--							<option value="">Health Insurance</option>-->
-<!--							<option value="">Earthquake Insurance</option>-->
-<!--						</select>-->
-<!--					</td>-->						
-					<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span class="badge text-bg-primary fs-6">Select Type</span></a></td>
-					<td><button class="mx-auto"><a th:href="@{/homeList/{customerId}(customerId=${c.customerId})}"><i class="fa-solid fa-house" id="icon-image"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/carList/{customerId}(customerId=${c.customerId})}"><i class="fa-solid fa-car" id="icon-image"></i></a></button></td>						
-					<td><button class="mx-auto"><a th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-edit"
-									class="fa-regular fa-pen-to-square"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>																							
+				<tr th:each="i :${insurance}">
+<!--					<input type="hidden" name="customer_id" th:value="${customer_id}"/>-->
+					<td th:text="${i.insuranceId}"></td>
+					<td th:text="${i.insuranceType}"></td>
+					<td th:text="${i.customerId}"></td>
+					<td th:text="${i.carId}"></td>
+					<td th:text="${i.homeId}"></td>
+					<td th:text="${i.offer}"></td>
+					<td th:text="${i.result}"></td>
+					<td th:text="${i.startDate}"></td>
+					<td th:text="${i.endDate}"></td>
+					<td th:text="${i.period}"></td>
+					<td><button class="mx-auto"><a th:href="@{/deleteHomeInsurance/{id}(id=${i.insuranceId})}"><i id="icon-trash"
+									class="gg-trash"></i></a></button></td>
 				</tr>
 			</tbody>
-		</table>		
+		</table>
+	</div>
 	</div>
 
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
 		crossorigin="anonymous"></script>
@@ -135,6 +155,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
 		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
 		crossorigin="anonymous"></script>
+	<script src="/js/app.js"></script>
 </body>
 
 </html>
